Better location for result text

--- a/index.html
+++ b/index.html
@@ -61,19 +61,22 @@
 							<input type="radio" name="side" value="left" disabled>
 							<div class="leftImage"></div>
 						</label>
-						<div class="routeDetails">
-							Route length:
-							<br>
-							<span id="routeDistance"></span>
-							<br>
-							Route duration:
-							<br>
-							<span id="routeDuration"></span>
-						</div>
 						<label class="radioItem">
 							<input type="radio" name="side" value="right" disabled>
 							<div class="rightImage"></div>
 						</label>
+					</div>
+					<div id="resultText">
+						
+					</div>
+					<div class="routeDetails">
+						Journey length:
+						<br>
+						<span id="routeDistance"></span>
+						<br>
+						Journey duration:
+						<br>
+						<span id="routeDuration"></span>
 					</div>
 				</div>
 			</div>
