Disable side autocomplete

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 				<div class="dataShow">
 					<div class="sideButtons">
 						<label class="radioItem">
-							<input type="radio" name="side" value="left" disabled>
+							<input type="radio" name="side" value="left" disabled autocomplete="off">
 							<div class="leftImage"></div>
 						</label>
 						<label class="radioItem">
-							<input type="radio" name="side" value="right" disabled>
+							<input type="radio" name="side" value="right" disabled autocomplete="off">
 							<div class="rightImage"></div>
 						</label>
 					</div>
