Fixed messed up sidebar on mobile, added blurb and readme
- added basic node server to allow for network viewing
- Firefox cross device debugging is preeety cool 🔥

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 		<script defer src="code.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJMRhIpOpG6RSPeaBkG_B4qrXDsH1Z3GI&libraries=geometry,places&callback=initMap"></script>
 		<link rel="stylesheet" href="style.css">
+		<title>Sunny Side - Where Should I Sit?</title>
 	</head>
 	<body onload="init()">
 		<div class="sidebar">
 			<div class="header">
-				Sunny Side Up
+				<div class="heading">Sunny Side Up</div>
+				<div class="blurb">
+					Getting sun in your eyes while travelling gets annoying, so this
+					tool lets you pick a route and see which side gets the most sun.
+				</div>
 			</div>
 			<div class="content">
 				<div class="dataEntry">
