--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script defer src="suncalc.js"></script>
-		<script defer src="code.js"></script>
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJMRhIpOpG6RSPeaBkG_B4qrXDsH1Z3GI&libraries=geometry,places&callback=initMap"></script>
+		<script src="suncalc.js"></script>
+		<script src="code.js"></script>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="leaflet/leaflet.css">
+		<script src="leaflet/leaflet.js"></script>
+		<script src="leaflet/leaflet-providers.js"></script>
 		<title>Sunny Side - Where Should I Sit?</title>
 	</head>
 	<body onload="init()">
+		<svg display="none">
+			<symbol viewBox="0 0 24 24" id="access_time">
+				<path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>
+				<path d="M0 0h24v24H0z" fill="none"/>
+				<path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
+			</symbol>
+			<symbol viewBox="0 0 24 24" id="update">
+				<defs>
+					<path d="M0 0h24v24H0V0z" id="a"/>
+				</defs>
+				<clipPath id="b">
+					<use overflow="visible" xlink:href="#a"/>
+				</clipPath>
+				<path clip-path="url(#b)" d="M21 10.12h-6.78l2.74-2.82c-2.73-2.7-7.15-2.8-9.88-.1-2.73 2.71-2.73 7.08 0 9.79 2.73 2.71 7.15 2.71 9.88 0C18.32 15.65 19 14.08 19 12.1h2c0 1.98-.88 4.55-2.64 6.29-3.51 3.48-9.21 3.48-12.72 0-3.5-3.47-3.53-9.11-.02-12.58 3.51-3.47 9.14-3.47 12.65 0L21 3v7.12zM12.5 8v4.25l3.5 2.08-.72 1.21L11 13V8h1.5z"/>
+			<symbol viewBox="0 0 24 24" id="refresh">
+				<path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
+				<path d="M0 0h24v24H0z" fill="none"/>
+			</symbol>
+		</svg>
 		<div class="sidebar">
 			<div class="header">
 				<div class="heading">Sunny Side Up</div>
@@ -20,35 +41,61 @@
 				<div class="dataEntry">
 					<div class="timeChoice">
 						<label class="iconCheckbox">
-							<input id="timeCheckbox" type="checkbox" onclick="toggleTime(event)">
-							<div class="timeIcon"></div>
+							<input id="timeCheckbox" type="checkbox" autocomplete="off" onclick="toggleTime(event)">
+							<div class="timeIcon">
+								<svg>
+									<use xlink:href="#access_time" />
+								</svg>
+							</div>
 						</label>
 						<input id="timeInput" type="time">
 						<label class="iconCheckbox">
 							<input type="button" onclick="setTime()">
-							<div class="updateIcon"></div>
+							<div class="updateIcon">
+								<svg>
+									<use xlink:href="#update" />
+								</svg>
+							</div>
 						</label>
 					</div>
-					<div class="transitModeButtons">
+					<!-- <div class="transitModeButtons">
 						<label class="radioItem">
 							<input type="radio" name="transitMode" value="DRIVING" checked>
-							<div class="carImage"/></div>
+							<div class="carImage"></div>
 						</label>
 						<label class="radioItem">
 							<input type="radio" name="transitMode" value="TRANSIT">
 							<div class="transitImage"></div>
 						</label>
 					</div>
-					<br>
-					<div class="address">
-						<label for="startAddress">Start Location:</label>
-						<br>
-						<input type="text" id="startAddress" list="startAddressList">
+					<br> -->
+					<div class="address" id="startAddress">
+						<label>
+							Start Location:
+							<div class="input-wrapper">
+								<input type="text" autocomplete="off"/>
+								<div class="loading-icon">
+									<svg>
+										<use xlink:href="#refresh" />
+									</svg>
+								</div>
+							</div>
+						</label>
+						<div class="autocomplete"></div>
 					</div>
-					<div class="address">
-						<label for="endAddress">End Location:</label>
-						<br>
-						<input type="text" id="endAddress">
+					<div class="address" id="endAddress">
+						<label>
+							End Location:
+							<div class="input-wrapper">
+								<input type="text" autocomplete="off"/>
+								<div class="loading-icon">
+									<svg>
+										<use xlink:href="#refresh" />
+									</svg>
+								</div>
+							</div>
+						</label>
+						<div class="autocomplete"></div>
 					</div>
 					<div class="functions">
 						<div class="calcButton">
@@ -72,21 +119,21 @@
 						</label>
 					</div>
 					<div id="resultText">
-						
+
 					</div>
 					<div class="routeDetails">
 						Journey length:
 						<br>
-						<span id="routeDistance"></span>
+						<span id="routeDistance">&nbsp;</span>
 						<br>
 						Journey duration:
 						<br>
-						<span id="routeDuration"></span>
+						<span id="routeDuration">&nbsp;</span>
 					</div>
 				</div>
 			</div>
 			<div class="footer">
-				© 2017 Tim Porritt 
+				<a href="https://github.com/Cimera42">© 2019 Tim Porritt</a>
 			</div>
 		</div>
 		<div id="map"></div>
